# diplom-intro-mlops

./: .gitignore  README.md  custom_transformers_notebook.ipynb  main.py  notas.txt  poo_notebook.ipynb  recursos.txt  refactorizacion-buenas-practicas.ipynb
.pytest_cache/v/cache/: nodeids
calc/: .gitignore  LICENSE  README.md  pyproject.toml  settings.local.toml  settings.toml
calc/src/calculadora/: __init__.py  __main__.py  config.py  settings.toml
calc/src/calculadora/operaciones/: __init__.py  tipo1.py  tipo2.py
calc/src/calculadora/tipo1/: __init__.py  resta.py  suma.py
calc/src/calculadora/tipo2/: __init__.py  division.py  multiplica.py
calc/src/calculadora/utils/: __init__.py  fraccion.py
calc/tests/: comandos_auxiliares.md
calc/tests/integration/: test_integracion.py
calc/tests/unit/: __init__.py  test_divide.py  test_fraccion.py  test_multiplica.py  test_resta.py  test_suma.py
data/: data.csv
ejemplo/: __main__.py  main.py  pandas.py
inicio_calc/app/: main.py
inicio_calc/tests/unit/: test_divide.py  test_resta.py  test_suma.py
initial_calc/: README.md
initial_calc/app/: operaciones.py
initial_calc/tests/integration/: __init__.py  test_integracion.py
initial_calc/tests/unit/: test_fraccion.py  test_multiplica.py
sesion-3/.github/workflows/: flake8-lint.yml  pytest.yml
sesion-3/calculadora/: README.md
sesion-3/calculadora/app/: __init__.py  ejemplo.py  operaciones.py
sesion-3/calculadora/tests/integration/: test_integracion.py
sesion-3/calculadora/tests/unit/: test_divide.py  test_fraccion.py  test_multiplica.py  test_resta.py  test_suma.py
titanic_serve/: .gitignore  README.md  pyproject.toml  requirements.txt
titanic_serve/models/: model.sav
titanic_serve/src/: config.py  inference.py
titanic_train/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
titanic_train/src/titanic_train/: config.py  train_model.py
tmp/: main.py
todos/: main.py  requirements.txt
utils_proc/: .gitignore  README.md  pyproject.toml
utils_proc/src/titanic_utils/: transformers.py
