[tool.poetry]
name = "calculadora"
version = "0.1.0"
description = "calculadora basica"
authors = ["Andre Bajorat"]
license = "MIT"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
