[tool.poetry]
name = "titanic_serve"
version = "0.1.0"
description = "API that makes the inference of the trained model"
authors = ["Mike Grados <daygoro.grados@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scikit-learn = "^1.1.2"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
pandas = "^1.5.0"
titanic-utils = {path = "C:/Users/daygo/work/diplomado/utils_proc/dist/titanic_utils-0.1.0-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
