[tool.poetry]
name = "titanic_train"
version = "0.1.0"
description = "training pipeline for the titanic problem"
authors = ["MikeG <daygoro.grados@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
transformers = {url = "https://github.com/abajorat93/transformers/archive/refs/tags/v0.1.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
